--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://example.com"
+base_url = "https://yuchiang-chang.github.io/blog/"
 
 # The site theme to use.
 theme = "particle-zola"
